--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -29,177 +29,189 @@
       <div class="head1">
         <h1>Hoạt Động</h1>
       </div>
-    <div id="activities_news">
-
-      
-      <div class="content_block ">
-        <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">CHECK YOUR MAIL!</div>
-          </div>
-          <span class="text2">
-            Loa…loa…loa Eco Smart VietNam
-            ĐÃ CÓ KẾT QUẢ TUYỂN THÀNH VIÊN!
-            
-            Lời đầu tiên, ESV xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
-            ...
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/photo/?fbid=138988312395956&set=a.109001262061328"
-              class="text3"
-            >
-              Read More</a
-            >
-          </div>
-        </div>
-        <div class="image2">
-          <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_14.jpg') }}"
-            class="img"
-            alt=""
-          />
-        </div>
-      </div>
-
-      <div class="content_block ">
-        <div class="image2" >
-          <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_13.jpg') }}"
-            class="img"
-            alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
-          />
-        </div>
-        <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">Exciting news!</div>
-          </div>
-          <span class="text2">
-            We've joined the Social Business/Startup system, and we're currently recruiting talented individuals who share our passion for eco-friendly products!
+    <div class="activities-container">
+      <div id="activities_news">
+        <div class="content_block ">
+          <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">CHECK YOUR MAIL!</div>
+            </div>
+            <span class="text2">
+              Loa…loa…loa Eco Smart VietNam
+              ĐÃ CÓ KẾT QUẢ TUYỂN THÀNH VIÊN!
+              
+              Lời đầu tiên, ESV xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
               ...
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/photo?fbid=137899759171478&set=a.105895305705257"
-              class="text3"
-            >
-              Read More</a
-            >
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/photo/?fbid=138988312395956&set=a.109001262061328"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
+          </div>
+          <div class="image2">
+            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_14.jpg') }}"
+              class="img"
+              alt=""
+            />
           </div>
         </div>
-      </div>
 
-      <div class="content_block ">
-        <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
+        <div class="content_block ">
+          <div class="image2" >
+            <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_13.jpg') }}"
+              class="img"
+              alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
+            />
           </div>
-          <span class="text2"
-            >Chỉ còn 1 ngày nữa… Eco Smart Vietnam sẽ đóng đơn tuyển thành viên.
-            Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Vietnam nhé....
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/photo?fbid=137528845875236&set=a.109001262061328"
-              class="text3"
-            >
-              Read More</a
-            >
+          <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">Exciting news!</div>
+            </div>
+            <span class="text2">
+              We've joined the Social Business/Startup system, and we're currently recruiting talented individuals who share our passion for eco-friendly products!
+                ...
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/photo?fbid=137899759171478&set=a.105895305705257"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
           </div>
         </div>
-        <div class="image2">
-          <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_12.jpg') }}"
-            class="img"
-            alt=""
-          />
-        </div>
-      </div>
 
-      <div class="content_block ">
-        <div class="image2">
-          <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_11.jpg') }}"
-            class="img"
-            alt=""
-            class="anh"
-          />
-        </div>
-        <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">Valentine’s Day is a holiday with one of the most significant carbon footprints</div>
+        <div class="content_block ">
+          <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
+            </div>
+            <span class="text2"
+              >Chỉ còn 1 ngày nữa… Eco Smart Vietnam sẽ đóng đơn tuyển thành viên.
+              Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Vietnam nhé....
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/photo?fbid=137528845875236&set=a.109001262061328"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
           </div>
-          <span class="text2"
-            >Nếu sự ngọt ngào của Ngày lễ tình nhân khiến bạn xao xuyến,
-            thì…
-            những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tan nát....
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/photo?fbid=137191855908935&set=a.109001262061328"
-              class="text3"
-            >
-              Read More</a
-            >
+          <div class="image2">
+            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_12.jpg') }}"
+              class="img"
+              alt=""
+            />
           </div>
         </div>
-      </div>
 
-      <div class="content_block ">
-        <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+        <div class="content_block ">
+          <div class="image2">
+            <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_11.jpg') }}"
+              class="img"
+              alt=""
+              class="anh"
+            />
           </div>
-          <span class="text2"
-            >- Alo! Tổng đài Eco Smart Vietnam xin nghe.
-            - Cho hỏi ở ESV có gì mà mọi người thích thú thế?
-            - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESV sau 3 tháng gắn bó nhé!
-            
-          </span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
-              class="text3"
-            >
-              Read More</a
-            >
+          <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">Valentine’s Day is a holiday with one of the most significant carbon footprints</div>
+            </div>
+            <span class="text2"
+              >Nếu sự ngọt ngào của Ngày lễ tình nhân khiến bạn xao xuyến,
+              thì…
+              những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tan nát....
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/photo?fbid=137191855908935&set=a.109001262061328"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
           </div>
         </div>
-        <div class="image2">
-          <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_10.jpg') }}"
-            class="img"
-            alt=""
-          />
-        </div>
-      </div>
 
-      <div class="content_block ">
-        <div class="image2">
-          <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="{{ url_for('static', filename='img/activities_page/activities_page_9.jpg') }}"
-            class="img"
-            alt=""
-          />
-        </div>
-        <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
-          <div class="block_header">
-            <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+        <div class="content_block ">
+          <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+            </div>
+            <span class="text2"
+              >- Alo! Tổng đài Eco Smart Vietnam xin nghe.
+              - Cho hỏi ở ESV có gì mà mọi người thích thú thế?
+              - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESV sau 3 tháng gắn bó nhé!
+              
+            </span>
+            <div class="readmore">
+              <a
+                href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
+                class="text3"
+              >
+                Read More</a
+              >
+            </div>
           </div>
-          <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Vietnam bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
-            đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Vietnam luôn trau dồi và phát triển bản thân</span>
-          <div class="readmore">
-            <a
-              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl"
-              class="text3"
-            >
-              Read More</a
-            >
+          <div class="image2">
+            <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_10.jpg') }}"
+              class="img"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div class="content_block ">
+          <div class="image2">
+            <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
+              src="{{ url_for('static', filename='img/activities_page/activities_page_9.jpg') }}"
+              class="img"
+              alt=""
+            />
+          </div>
+          <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
+            <div class="block_header">
+              <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+            </div>
+            <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Vietnam bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
+              đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Vietnam luôn trau dồi và phát triển bản thân</span>
+            <div class="readmore">
+              <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl" class="text3">Read More</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-      
+      <div class="most-watched">
+        <p class="mw-heading">Xem nhiều</p>
+        <div class="mw-content">
+          
+          <div class="mw-content-block">
+            <img class="mw-image mw-child" src="{{ url_for('static', filename='img/activities_page/activities_page_14.jpg') }}" class="img" alt=""/>
+            <div class="text1 mw-child">CHECK YOUR MAIL!</div>
+          </div>
+          <div class="mw-content-block">
+            <img class="mw-image mw-child" src="{{ url_for('static', filename='img/activities_page/activities_page_13.jpg') }}" class="img" alt=""/>
+            <div class="text1 mw-child">Exciting news!</div>
+          </div>
+          <div class="mw-content-block">
+            <img class="mw-image mw-child" src="{{ url_for('static', filename='img/activities_page/activities_page_12.jpg') }}" class="img" alt=""/>
+            <div class="text1 mw-child">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
+          </div>
+        </div>
+      </div>
+    </div>        
     <div class="pagination">
       <ul>
         <li><a href="/activities/" data-page ="1" class="page-link">1</a></li>
