add green & fix resposive avhievement, del cart, fix pop-op & transition in product

--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -193,6 +193,8 @@
           </div>
         </div>
       </div>
+      
+      <!--Most-watched -->
       <div class="most-watched">
         <p class="mw-heading">Xem nhiều</p>
         <div class="mw-content">
