--- a/project/static/css/achievement.css
+++ b/project/static/css/achievement.css
@@ -7,7 +7,6 @@
     margin-bottom: 15%;
 }
 .achievement-title{
-      margin-top: 1rem;
   font-size: 2rem;
   text-align: center;
   font-weight: 700;
@@ -15,10 +14,9 @@
   color: black;
 }
 .wrapper{
-    /* border: 1px solid white; */
     position: absolute;
     width: 80vw;
-    margin-top: 10vh;
+    margin-top: 15vh;
     transform: translate(-50%, -50%);
     left: 50%;
     display: flex;
@@ -28,17 +26,15 @@
 .container{
     width: 28vmin;
     height: 28vmin;
-    /* border: 1px solid #e5d9b6; */
     display: flex;
     flex-direction: column;
     padding: 1em 0;
     position: relative;
     font-size: 16px;
     border-radius: 20px;
-    /* border-bottom: 10px solid goldenrod; */
 }
 i{
-    color: goldenrod;
+    color: green;
     font-size: 2.5em;
     text-align: center;
 }
@@ -57,7 +53,7 @@ span.text {
     font-weight: 400;
     line-height: 0;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
     .wrapper {
       width: 85vw;
     }
@@ -66,40 +62,47 @@ span.text {
       width: 26vmin;
       font-size: 12px;
     }
+    .achievement{
+      margin-bottom: 20%;
   }
-  @media screen and (max-width: 768px) {
-    /* .wrapper {
+  }
+  @media screen and (max-width: 780px) {
+    .achievement-title{
+      font-size:1.3rem;
+    }
+    .wrapper {
       width: 90vw;
-      flex-wrap: wrap;
+      /* flex-wrap: wrap; */
       gap: 30px;
-    } */
+      margin-top: 10vh;
+    }
     .container {
       width: calc(50% - 40px);
       height: 26vmin;
       font-size: 10px;
     }
     .achievement{
-        margin-bottom: 30%;
+        margin-bottom: 40%;
     }
   }
   @media screen and (max-width: 480px) {
     .wrapper {
       gap: 15px;
+      margin-top: 5vh;
     }
     .container {
       width: 100%;
       height: 25vmin;
       font-size: 8px;
     }
+    .achievement{
+      margin-bottom: 40%;
+  }
 }
 @media(max-width:730px){
   .achievement-title{
     font-size:1.5rem;
   }
+
 }
 
-@media(max-width:600px){
-  .achievement-title{
-    font-size:1.3rem;
-  }
-}
