Edit ESV to ESS

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -53,7 +53,7 @@
         </div>
         
         <div class="mainstyle mainstyle-3">
-          <h2 class="head2ourteam">Câu chuyện của Eco Smart Việt Nam</h2>
+          <h2 class="head2ourteam">Câu chuyện của Eco Smart Solutions</h2>
           <!-- Founder Content -->
           <div class="interview">
             <figure>
@@ -64,14 +64,14 @@
               />
               <!-- <img class="caption" src="../assets/pics/aboutus/founder.jpg" alt="Founder" /> -->
               <figcaption class="founder_pic">
-                Người sáng lập Eco Smart Việt Nam - Mr. Bùi Đình Trí
+                Người sáng lập Eco Smart Solutions - Mr. Bùi Đình Trí
               </figcaption>
             </figure>
             <hr class="aboutus-hr"/>
             <p class="statementfromTri">
               Để hình thành và phát triển một dự án, sự đóng góp của tổng giám
               đốc là vô cùng quan trọng. Hôm nay hãy cùng chúng tôi tìm hiểu về
-              người sáng lập ra Eco Smart Việt Nam - anh Bùi Đình Trí qua những
+              người sáng lập ra Eco Smart Solutions - anh Bùi Đình Trí qua những
               thông tin phỏng vấn dưới đây để hiểu thêm nhiều thông tin thú vị
               về Eco Smart. Hãy bắt đầu nào!
             </p>
@@ -100,7 +100,7 @@
             </p>
             <p class="question">
               Câu hỏi 3: Anh có thể chia sẻ một chút về mục tiêu và kỳ vọng mà
-              bạn đặt ra tại Eco Smart Việt Nam trong tương lai?
+              bạn đặt ra tại Eco Smart Solutions trong tương lai?
             </p>
             <p class="answer">
               Anh Trí: Như tôi chia sẻ, tôi là người có máu liều lĩnh nhưng
@@ -116,11 +116,11 @@
               dõi của dự án không?
             </p>
             <p class="answer">
-              Anh Trí: Tôi chỉ muốn nói rằng Eco Smart Vietnam là một dự án sẽ
+              Anh Trí: Tôi chỉ muốn nói rằng Eco Smart Solutions là một dự án sẽ
               không mọi người phải thất vọng bởi vì với đội ngũ của Eco Smart
               chúng tôi - những người mà tôi tin là đầy tài năng và trách nhiệm
               - sẽ có thể giúp dự án phát triển và lan tỏa rộng rãi. Ngoài ra,
-              chúng tôi cũng xin được cam kết là Eco Smart Việt Nam sẽ luôn nỗ
+              chúng tôi cũng xin được cam kết là Eco Smart Solutions sẽ luôn nỗ
               lực hết mình để hoàn thành sứ mệnh mà chính chúng tôi đặt ra: Hành
               động vì sự phát triển và an toàn của môi trường Việt Nam!”
             </p>
