--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -21,13 +21,13 @@
           />
         </video>
         <div class="all_text">
-          <h2 id="title">Về Eco Smart Vietnam</h2>
+          <h2 id="title">Về Eco Smart Solutions</h2>
           <hr class="seperate" />
           <div id="detailtext">
             <h5 class="text1">
-              Giai đoạn 2022-2024, Eco Smart Việt Nam hoạt động với tầm nhìn
+              Giai đoạn 2022-2024, Eco Smart Solutions hoạt động với tầm nhìn
               trở thành một trong những tổ chức sinh viên tích cực hành động vì
-              môi trường hàng đầu miền Bắc. Đặc biệt, ESV là đơn vị tiên phong thúc đẩy phát 
+              môi trường hàng đầu miền Bắc. Đặc biệt, ESS là đơn vị tiên phong thúc đẩy phát 
               triển các sản phẩm thân thiện với môi trường.
             </h5>
             <a href="/about-us/" class="text2">Đọc thêm</a>
