--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -37,10 +37,10 @@
               <div class="text1">CHECK YOUR MAIL!</div>
             </div>
             <span class="text2">
-              Loa…loa…loa Eco Smart VietNam
+              Loa…loa…loa Eco Smart Solutions
               ĐÃ CÓ KẾT QUẢ TUYỂN THÀNH VIÊN!
               
-              Lời đầu tiên, ESV xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
+              Lời đầu tiên, ESS xin gửi lời cảm ơn chân thành nhất tới những chiếc đơn xinh xắn từ các bạn.
               ...
             </span>
             <div class="readmore">
@@ -94,8 +94,8 @@
               <div class="text1">THÔNG BÁO CÒN 1 NGÀY ĐĂNG KÝ ĐÓNG ĐƠN</div>
             </div>
             <span class="text2"
-              >Chỉ còn 1 ngày nữa… Eco Smart Vietnam sẽ đóng đơn tuyển thành viên.
-              Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Vietnam nhé....
+              >Chỉ còn 1 ngày nữa… Eco Smart Solutions sẽ đóng đơn tuyển thành viên.
+              Vì thế hãy nhanh chóng đăng ký ngay để có cơ hội tham gia Eco Smart Solutions nhé....
             </span>
             <div class="readmore">
               <a
@@ -147,12 +147,12 @@
         <div class="content_block ">
           <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
             <div class="block_header">
-              <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+              <div class="text1">HUMAN OF ESS EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESS CÓ CẢM NHẬN GÌ?</div>
             </div>
             <span class="text2"
-              >- Alo! Tổng đài Eco Smart Vietnam xin nghe.
-              - Cho hỏi ở ESV có gì mà mọi người thích thú thế?
-              - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESV sau 3 tháng gắn bó nhé!
+              >- Alo! Tổng đài Eco Smart Solutions xin nghe.
+              - Cho hỏi ở ESS có gì mà mọi người thích thú thế?
+              - Thế để tớ kể cậu nghe cảm nhận của những thành viên ESS sau 3 tháng gắn bó nhé!
               
             </span>
             <div class="readmore">
@@ -183,10 +183,10 @@
           </div>
           <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
             <div class="block_header">
-              <div class="text1">HUMAN OF ESV EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESV CÓ CẢM NHẬN GÌ?</div>
+              <div class="text1">HUMAN OF ESS EP.3-2: 3 THÁNG TRÔI QUA, THÀNH VIÊN ESS CÓ CẢM NHẬN GÌ?</div>
             </div>
-            <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Vietnam bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
-              đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Vietnam luôn trau dồi và phát triển bản thân</span>
+            <span class="text2">Thấm thoát đã 3 tháng trôi qua kể từ khi Eco Smart Solutions bắt đầu khởi động. Từ xây dựng nền móng đầu tiên, 
+              đến lúc cùng nhau làm việc và học tập, những thành viên Eco Smart Solutions luôn trau dồi và phát triển bản thân</span>
             <div class="readmore">
               <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02JrrQmT6i68XZtjRE7zuWxdeftFF8cfy14sz2QbvV8q8KTUTeE8q4X1SsZrRGQL5vl" class="text3">Read More</a>
             </div>
