--- a/project/templates/activities/page2.html
+++ b/project/templates/activities/page2.html
@@ -204,7 +204,7 @@
         <div class="content_block ">
           <div class="content2"style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
             <div class="block_header">
-              <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</div>
+              <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART SOLUTIONS</div>
             </div>
             <span class="text2"
               >Meme hay còn được gọi với cái tên thân thương hơn là ảnh chế là một
@@ -241,7 +241,7 @@
             <div class="block_header">
               <div class="text1">Ready for phase 2: TAKING OFF!</div>
             </div>
-            <span class="text2">#ESV #ECO #ECOSMARTVIETNAM #IMPACT </span>
+            <span class="text2">#ESS #ECO #ECOSMARTVIETNAM #IMPACT </span>
             <div class="readmore">
               <a
                 href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257"
