--- a/project/templates/activities_content.html
+++ b/project/templates/activities_content.html
@@ -30,7 +30,7 @@
                 <div class="activities_photo">
                     <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="{{ url_for('static', filename='img/activities/activities2.jpg') }}" alt="activites2" class="anh anh2"></a>
                     <figure class="photo_cap">
-                        <figcaption>Eco Smart Vietnam</figcaption>
+                        <figcaption>Eco Smart Solutions</figcaption>
                     </figure>
                 </div>
 
