--- a/project/templates/animation.html
+++ b/project/templates/animation.html
@@ -98,7 +98,7 @@
             />
             <div class="animation-content">
               <p>
-                Eco Smart VietNam is committed to 2 main MISSIONS and VISIONS:
+                Eco Smart Solutions is committed to 2 main MISSIONS and VISIONS:
               </p>
               <p>
                 - Raising Vietnamese awareness of environmental protection
@@ -119,11 +119,11 @@
               class="d-block img-border"
             />
             <div class="animation-content">
-              <p>With those things, ECO SMART VIETNAM was born.</p>
+              <p>With those things, ECO SMART SOLUTIONS was born.</p>
               <p>
-                In 2022-2024, Eco Smart VietNam operates with the vision of
+                In 2022-2024, Eco Smart Solutions operates with the vision of
                 becoming one of the leading active student organizations in the
-                North acting for the environment. In particular, ESV is a
+                North acting for the environment. In particular, ESS is a
                 pioneer in promoting the development of environmentally friendly
                 products.
               </p>
