--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -14,7 +14,7 @@
   <p class="footer-style">
     Bản quyền thuộc về
     <a class="footer-href" href="https://www.facebook.com/ecosmartvietnam"
-      >ECO SMART VIETNAM</a
+      >ECO SMART SOLUTIONS</a
     >
   </p>
   <div>
