--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -3,7 +3,7 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <h4>Eco Smart Vietnam</h4>
+    <h4>Eco Smart Solutions</h4>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat optio
       quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa.
