--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -25,7 +25,7 @@
         />
       </div>
       <div class="content-right flex-item">
-        <h1 class="heading1">Eco Smart Vietnam</h1>
+        <h1 class="heading1">Eco Smart Solutions</h1>
         <h2 class="heading2">Eco - Aware - Act</h2>
 
         <p>
