--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
 
-    <title>Eco Smart Vietnam</title>
+    <title>Eco Smart Solutions</title>
     <link rel="icon" href="{{ url_for('static', filename='img/aboutus/logo2.png') }}" type="image/x-icon" />
 </head>
 
