CSS Achievement, Customer, Process Update

--- a/project/templates/customer.html
+++ b/project/templates/customer.html
@@ -55,7 +55,7 @@
                             Bùi Tôn Hiến
                         </div>
                         <div class="c_job">
-                            Cục trưởng cục Khoa học Lao Động và Xã Hội, Bộ Lao Động Thương Binh và Xã hội
+                            Cục trưởng cục Khoa học Lao Động và Xã Hội, Bộ Lao Động Thương Binh và Xã hội, trực tiếp chỉ đạo chính sách phát triển bền vững của Chính Phủ Việt Nam
                         </div>
                         <div class="c_rate">
                             <i class="fas fa-star"></i>
