--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -20,9 +20,8 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include 'sponsor.html' %} {% include 'customer.html' %} {% include 'process.html' %} {% include 'achievement.html' %} {% include'productfeature.html' %} {% include 'video.html' %} {% include 'scrolltotop.html' %}
-    <div>{% include 'aboutus_content.html' %}</div>
-    {% include 'footer1.html' %}
+    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include 'sponsor.html' %} {% include 'customer.html' %} {% include 'process.html' %} {% include 'achievement.html' %} {% include'productfeature.html' %} {% include 'video.html' %} {% include
+    'scrolltotop.html' %} {% include 'footer1.html' %}
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 
