--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -26,7 +26,7 @@
       </div>
       <div class="content-right flex-item">
         <h1 class="heading1">Eco Smart Solutions</h1>
-        <h2 class="heading2">Eco - Aware - Act</h2>
+        <h2 class="heading2">Tôn trọng - Hiệu quả - Chuyên nghiệp</h2>
 
         <p>
          Tiên phong trong việc thúc đẩy sự phát triển <br />
