chinh lai noi dung footer

--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -5,8 +5,7 @@
   <div class="footer-content">
     <h4>Eco Smart Solutions</h4>
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat optio
-      quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa.
+      Giai đoạn 2022-2024, Eco Smart Solutions hoạt động với tầm nhìn trở thành một trong những tổ chức sinh viên tích cực hành động vì môi trường hàng đầu miền Bắc. Đặc biệt, ESS là đơn vị tiên phong thúc đẩy phát triển các sản phẩm thân thiện với môi trường
     </p>
   </div>
 
