--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -1,40 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrolling Button</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/scrolling.css') }}"
-    />
-    <script
-      type="text/javascript"
-      src="{{ url_for('static', filename='js/scrolling.js') }}"
-    ></script>
-  </head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/scrolling.css') }}" />
+</head>
 
-  <body>
+<body>
     <div class="title1">
-      <div class="image-left flex-item">
-        <img
-          class="env-img"
-          src="{{ url_for('static', filename='img/index/test.png') }}"
-          alt="test"
-        />
-      </div>
-      <div class="content-right flex-item">
-        <h1 class="heading1">Eco Smart Solutions</h1>
-        <h2 class="heading2">Tôn trọng - Hiệu quả - Chuyên nghiệp</h2>
+        <div class="image-left flex-item">
+            <img class="env-img" src="{{ url_for('static', filename='img/index/test.png') }}" alt="test" />
+        </div>
+        <div class="content-right flex-item">
+            <h1 class="heading1">Eco Smart Solutions</h1>
+            <h2 class="heading2">Tôn trọng - Hiệu quả - Chuyên nghiệp</h2>
 
-        <p>
-         Tiên phong trong việc thúc đẩy sự phát triển <br />
-          sản phẩm thân thiện môi trường.
-        </p>
+            <p>
+                Tiên phong thực hiện sứ mệnh nâng tầm thương hiệu - thúc đẩy kinh doanh trong hệ sinh thái các doanh nghiệp phát triển vì sự bền vững của xã hội.
+            </p>
 
-        <a class="button-scroll" href="#aboutus-scroll">Đọc thêm <span class = "button-icon">↘</span></a>
-      </div>
+            <a class="button-scroll" href="/about-us/">Đọc thêm <span class = "button-icon">↘</span></a>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
