fix all the wrong text and content, fix the order in index page, fix css index

--- a/project/templates/customer.html
+++ b/project/templates/customer.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="customer_style">
-        <h1 class="c_title">Đối tác nói gì về chúng tôi?</h1>
+        <h1 class="c_title"> Đội ngũ cố vấn - bảo trợ</h1>
         <div class="c_wrapper">
             <div class="c_box">
 
