--- a/project/templates/process.html
+++ b/project/templates/process.html
@@ -18,7 +18,7 @@
 
   <body>
     <div id="process_main">
-      <h2 class="p_title">Quy trình hoạt động</h2>
+      <h2 class="p_title">Quy trình hoạt động - GreenBoost</h2>
       <div class="process_container">
         <input type="radio" class="step1" checked id="" />
         <input type="radio" class="step2" checked id="" />
@@ -56,10 +56,9 @@
               <span><i class="fa-sharp fa-solid fa-magnifying-glass"></i></span>
               <h1>Tìm kiếm đối tác</h1>
               <p>
-                Chúng tôi sẽ tìm kiếm và đề xuất hợp tác với các doanh nghiệp
-                kinh doanh sản phẩm eco friendly. Chúng tôi sẽ tiếp cận các
-                doanh nghiệp này bằng cách sử dụng các kênh truyền thông xã hội
-                và các sự kiện trực tuyến và offline.
+                Chúng tôi sẽ tìm kiếm, chọn lọc và đề xuất hợp tác với các doanh nghiệp
+                trong hệ sinh thái các doanh nghiệp phát triển bền vững. Chúng tôi sẽ chủ động tiếp cận các
+                doanh nghiệp này và gửi lời mời hợp tác kinh doanh, hỗ trợ họ quảng bá thương hiệu và đề xuất các chiến lược phân phối sản phẩm phù hợp.
               </p>
             </section>
             <section class="step2-section">
