--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -12,7 +12,7 @@
 <body>
     <div class="title1">
         <div class="image-left flex-item">
-            <img class="env-img" src="{{ url_for('static', filename='img/index/test.png') }}" alt="test" />
+            <img class="env-img" src="{{ url_for('static', filename='img/index/ess_logo.jpg') }}" alt="logo" />
         </div>
         <div class="content-right flex-item">
             <h1 class="heading1">Eco Smart Solutions</h1>
