--- a/project/templates/sponsor.html
+++ b/project/templates/sponsor.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="sponsors-showcase">
-      <h2 class="h2ofsponsor">Đối tác của Eco Smart Solutions</h2>
+      <h2 class="h2ofsponsor">Một số đối tác nổi bật </h2>
         <div class="sponsors">
           <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.png') }}" alt="Sponsor 1 Logo"></a>
           <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor2-logo.png') }}" alt="Sponsor 2 Logo"></a>
