--- a/project/templates/achievement.html
+++ b/project/templates/achievement.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
         <!-- FontAwesome Icons -->
-        <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      /> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/achievement.css') }}">
+        <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" /> 
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/achievement.css') }}">
+        <!-- Counter-Up -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
 </head>
 <body>
 <div class="achievement">    
@@ -18,31 +21,54 @@
     <div class="wrapper">
         <div class="container">
             <i class="fa-sharp fa-solid fa-medal"></i>
-            <span class="num" data-val="35+">000</span>
+            <span class="num" >35</span>
             <span class="text"> Members</span>
         </div>
 
         <div class="container">
             <i class="fa-solid fa-handshake"></i>
-            <span class="num" data-val="100">000</span>
+            <span class="num" >100</span>
             <span class="text"> Products sold</span>
         </div>        
             
         <div class="container">
             <i class="fa-solid fa-earth-asia"></i>
-            <span class="num " data-val="10">000</span>
+            <span class="num " >10</span>
             <span class="text"> Regions</span>
         </div>        
         
         <div class="container">
             <i class="fa-sharp fa-solid fa-medal"></i>
-            <span class="num " data-val="500">000</span>
+            <span class="num "  >100000</span>
             <span class="text"> Approach</span>
         </div>
     </div>
 </div>
 
 
-    <script src="{{ url_for('static', filename='js/achievement.js') }}"></script>
+<script>
+    $('.num').each(function () {
+        $(this).prop('Counter', 0).animate({
+            Counter: $(this).text()
+        }, {
+            duration: 4000,
+            easing: 'swing',
+            step: function (now) {
+                $(this).text(Math.ceil(now) + "+");
+            }
+        });
+    });
+</script>
+    <!-- <script>
+        $(document).ready(function(){
+          $('.num').counterUp({
+            
+            delay: 10,
+            time: 4000
+          });
+          
+        });
+        
+        </script> -->
 </body>
 </html>
