Changing executive board (again)

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -46,7 +46,8 @@
 
         
         <div class="ourteam-background">
-          <div class="mainstyle mainstyle-2">
+          <div class="mainstyle mainstyle-2" id = "mainstyle2">
+            <h2 class="head2executive">Ban điều hành</h2>
             {% include 'ourteam.html' %}
           </div>
         </div>
