change approach to reach

--- a/project/templates/achievement.html
+++ b/project/templates/achievement.html
@@ -40,7 +40,7 @@
         <div class="container">
             <i class="fa-sharp fa-solid fa-medal"></i>
             <span class="num "  >13000</span>
-            <span class="text"> Approach</span>
+            <span class="text"> Reach</span>
         </div>
     </div>
 </div>
