change all ecofriendly to sustainable

--- a/project/templates/animation.html
+++ b/project/templates/animation.html
@@ -104,7 +104,7 @@
                 - Raising Vietnamese awareness of environmental protection
                 activities
               </p>
-              <p>- Promote the development of eco friendly products.</p>
+              <p>- Promote the development of sustainable products.</p>
               <p>With CORE VALUES:</p>
               <p>- Effectiveness: Actionable results.</p>
               <p>- Respect: Listening, sincerity and humility</p>
