--- a/project/templates/process.html
+++ b/project/templates/process.html
@@ -66,10 +66,10 @@
               <h1>Đề xuất gói dịch vụ</h1>
               <p>
                 Chúng tôi sẽ tạo ra các gói dịch vụ khác nhau để phù hợp với nhu
-                cầu của khách hàng, bao gồm gói 1 năm với mức giá 5 triệu đồng,
-                gói 6 tháng với mức giá 3 triệu đồng và gói 3 tháng với mức giá
-                2 triệu đồng. Các gói này sẽ bao gồm các dịch vụ như tư vấn
-                marketing, quảng cáo trực tuyến, thiết kế trang web, cung cấp
+                cầu của khách hàng, bao gồm gói 1 năm với mức giá 8.900.000 VNĐ,
+                gói 6 tháng với mức giá 6.900.000 VNĐ và gói 3 tháng với mức giá
+                3.900.000 VNĐ. Các gói này sẽ bao gồm các dịch vụ như tư vấn
+                marketing, tư vấn chiến lược, phân tích thị trường, quảng cáo trực tuyến, thiết kế trang web, cung cấp
                 nội dung và hỗ trợ khách hàng.
               </p>
             </section>
@@ -79,7 +79,7 @@
               <p>
                 Chúng tôi sẽ xây dựng các nền tảng truyền thông như website,
                 Facebook, Instagram và TikTok để giới thiệu và quảng bá các sản
-                phẩm eco friendly product của đối tác. Chúng tôi sẽ tập trung
+                phẩm đạt yêu cầu phát triển bền vững của đối tác. Chúng tôi sẽ tập trung
                 vào việc thiết kế các nội dung hấp dẫn và chia sẻ chúng trên các
                 nền tảng này để tăng khả năng tiếp cận của khách hàng.
               </p>
@@ -92,7 +92,7 @@
                 sản phẩm thân thiện môi trường. Chúng tôi sẽ tạo ra các sự kiện
                 trực tuyến và offline nhằm tăng cường sự kết nối giữa các doanh
                 nghiệp và khách hàng. Chúng tôi cũng sẽ cung cấp các nội dung
-                giáo dục và thông tin về các sản phẩm eco friendly product cho
+                giáo dục và thông tin về các sản phẩm phát triển bền vững cho
                 cộng đồng này.
               </p>
             </section>
@@ -101,7 +101,7 @@
               <h1>Tư vấn & hỗ trợ</h1>
               <p>
                 Chúng tôi sẽ cung cấp các dịch vụ tư vấn và hỗ trợ khách hàng về
-                các sản phẩm eco friendly product của đối tác. Chúng tôi sẽ giúp
+                các sản phẩm phát triển bền vững của đối tác. Chúng tôi sẽ giúp
                 khách hàng tìm kiếm các sản phẩm phù hợp với nhu cầu của họ và
                 đưa ra các giải pháp tiết kiệm chi phí cho các doanh nghiệp.
                 Chúng tôi cũng sẽ đảm bảo rằng khách hàng nhận được sự hỗ trợ và
