--- a/project/static/css/ourteam.css
+++ b/project/static/css/ourteam.css
@@ -114,3 +114,11 @@
     padding-left: 4rem;
     padding-right: 4rem;
 }
+
+p.personal_achievement {
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+    margin: 0.5em 0 2em 0;
+    letter-spacing: 1px;
+}
