--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,68 +8,75 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/ourteam.css') }}">
     <title>Executive Board</title>
 </head>
+
 <body>
-  <section id="ecoteam">
-    <div class="department first-department">
-        <!--Ban Chu Tich-->
-        <!--Viet Hoan-->
-        <div class="card">
-            <div class="img-container">
-                <img src="{{ url_for('static', filename='img/aboutus/coo.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+    <section id="ecoteam">
+        <div class="department first-department">
+            <!--Ban Chu Tich-->
+            <!--Viet Hoan-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/coo.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                </div>
+                <h3>Ms. Mai Thu Thủy</h3>
+                <p>Trưởng phòng Hành chính - Nhân sự</p>
+
+                <div class="icons"></div>
             </div>
-            <h3>Ms. Mai Thu Thủy</h3>
-            <p>Trưởng phòng Hành chính - Nhân sự</p>
-            <div class="icons"></div>
+
+            <!--Anh Tri-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/president.png') }}" alt="Mr Bui Dinh Tri - Founder">
+                </div>
+                <h3>Mr. Bùi Đình Trí</h3>
+                <p>Giám đốc điều hành</p>
+                <p class="personal_achievement">Cử nhân song ngành Công nghệ Thông tin/Kinh tế Đầu tư Đại học Macalester, Minnesota, Hoa Kỳ
+                </p>
+            </div>
+            <!--Kim Ngan-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/cco.png') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                </div>
+                <h3>Mr. Phan Huy Hoàng</h3>
+                <p>Giám đốc công nghệ</p>
+                <p class="personal_achievement">Thạc sĩ Công nghệ Thông tin Đại học Depaul, Chicago, Hoa Kỳ
+                </p>
+                <div class="icons"></div>
+            </div>
         </div>
-    
-        <!--Anh Tri-->
-        <div class="card">
-            <div class="img-container">
-                <img src="{{ url_for('static', filename='img/aboutus/president.png') }}" alt="Mr Bui Dinh Tri - Founder">
+        <div class="department">
+            <!--RD and HR Department-->
+            <!--Anh Trung-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/headbus.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                </div>
+                <h3>Lưu Phan Phương Linh</h3>
+                <p>Giám đốc kinh doanh</p>
+                <div class="icons"></div>
             </div>
-            <h3>Mr. Bùi Đình Trí</h3>
-            <p>Giám đốc điều hành</p>
-        </div>
-        <!--Kim Ngan-->
-        <div class="card">
-            <div class="img-container">
-                <img src="{{ url_for('static', filename='img/aboutus/cco.png') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+            <!--Chau Anh-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/headrd.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                </div>
+                <h3>Ngô Châu Anh</h3>
+                <p>Trưởng phòng nghiên cứu và phát triển</p>
+                <div class="icons"></div>
             </div>
-            <h3>Mr. Phan Huy Hoàng</h3>
-            <p>Giám đốc công nghệ</p>
-            <div class="icons"></div>
-        </div>
-      </div>
-      <div class="department">
-          <!--RD and HR Department-->
-          <!--Anh Trung-->
-          <div class="card">
-            <div class="img-container">
-        <img src="{{ url_for('static', filename='img/aboutus/headbus.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+            <!--Chi Giang-->
+            <div class="card">
+                <div class="img-container">
+                    <img src="{{ url_for('static', filename='img/aboutus/headmarcom.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                </div>
+                <h3>Nguyễn Minh Khuê</h3>
+                <p>Trưởng phòng Marketing</p>
+                <div class="icons"></div>
             </div>
-        <h3>Lưu Phan Phương Linh</h3>
-        <p>Giám đốc kinh doanh</p>
-            <div class="icons"></div>
-      </div>
-          <!--Chau Anh-->
-          <div class="card">
-              <div class="img-container">
-                  <img src="{{ url_for('static', filename='img/aboutus/headrd.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
-              </div>
-              <h3>Ngô Châu Anh</h3>
-              <p>Trưởng phòng nghiên cứu và phát triển</p>
-              <div class="icons"></div>
-          </div>
-          <!--Chi Giang-->
-          <div class="card">
-            <div class="img-container">
-        <img src="{{ url_for('static', filename='img/aboutus/headmarcom.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
-            </div>
-        <h3>Nguyễn Minh Khuê</h3>
-        <p>Trưởng phòng Marketing</p>
-            <div class="icons"></div>
-      </div>
         </div>
     </section>
-  </body>
-  </html>
+</body>
+
+</html>
